Correct spacing between benefits and CTA desktop

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ ion-icon:hover {
     display: flex;
     flex-direction: column;
     padding: 50px 90px;
-    margin-bottom: 90px;
+    margin-bottom: 20px;
     gap: 30px;
 }
 
